feat: add find clients
